<resources>
    <string name="app_name">"מה אוכלים היום? "</string>
    <string name="welcome">ברוכים הבאים</string>
    <string name="restaurant">מסעדה</string>
    <string name="logon">כניסה</string>
    <string name="logout">יציאה</string>
    <string name="add_group">יצירת קבוצה</string>
    <string name="my_groupa">קבוצות שלי</string>
    <string name="settings">הגדרות</string>
    <string name="salads">סלטים</string>
    <string name="main_dish">עיקרית</string>
    <string name="side_dish">תוספת</string>
    <string name="build_a_menu">בניית תפריט</string>
    <string name="build_a_group">יצירת קבוצה</string>
    <string name="save_btn">שמור</string>
    <string name="enter_btn">כניסה</string>
    <string name="ok_dialog_btn">אשר</string>
    <string name="send_dialog_btn">שלח</string>
    <string name="cancel_dialog_btn">בטל</string>
    <string name="sorry_message">אופס, יש לנו בעיה</string>
    <string name="success_message">יש!!!</string>
    <string name="choice_message_header">מחכה לבחירתך</string>
    <string name="data_saved_message">הנתונים נשמרו בהצלחה</string>
    <string name="user_deleted_message">המשתמש נמחק בהצלחה</string>
    <string name="group_deleted_message">הקבוצה נמחקה בהצלחה</string>
    <string name="data_not_saved_message">מצטערים, השרת למטה והתפריט לא נשמר. אנא נסה/י מאוחר יותר.\nהבחירות שלך נשמרו, ויטענו בכניסה הבאה.</string>
    <string name="still_no_connection">מצטערים, השרת למטה.\nאנא נסו מאוחר יותר</string>
    <string name="prev_data_saved_message">הנתונים שהזנת מקודם נשמרו בהצלחה.\nמצטערים על אי הנוחות ותודה על ההבנה.</string>
    <string name="save_message">האם את/ה בטוח/ה בבחירתך?\nלחיצה על שלח תעביר את בחירתך לאדמין ולא תוכל/י לשנות אותה.</string>
    <string name="delete_message">האם את/ה בטוח/ה בבחירתך?.</string>
    <string name="dont_show_again">אל תציג הודעה זו שוב.</string>
    <string name="account_header">משתמש חדש/קיים?</string>
    <string name="email_hint">דואר אלקטרוני</string>
    <string name="name_hint">שם משתמש</string>
    <string name="signin_explanation">כדי ליצור חשבון יש למלא את המייל ואת שם המשתמש.\n מנהל הקבוצה ימצא אותך על ידי המייל שהזנת, ויזמין אותך לקבוצה דרך המייל.</string>
    <string name="login_explanation">כדי להתחבר לחשבון קיים מספיק להזין 1 מתוך שתי השדות: שם משתמש או דואר אלקטרוני</string>
    <string name="wrong_user_input">שם משתמש חייב להיות לא ריק, ודואר אלקטרוני חייב להיות בתבנית הבאה: example@xxx.yyy</string>
    <string name="email_explanation">אנא הזן שם לקבוצה ותוסיף את פרטי דואר האלקטרוני של כל חברי הקבוצה.</string>
    <string name="user_not_registered">שם של קבוצה שהזנת לא קיים, או שטרם זומנת לקבוצה זו.</string>
    <string name="group_hint">שם קבוצה</string>
    <string name="sending_mail">שולח מייל..</string>
    <string name="mail_sent_message">המייל נשלח בהצלחה!</string>
    <string name="no_orders_available">טרם בוצעו על ידך הזמנות</string>
    <string name="no_groups_available">טרם יצרת קבוצה</string>
    <string name="no_menu_available">התפריט של היום עדיין לא זמין</string>
    <string name="alerts">התראות</string>
    <string name="list_display">רשימה</string>
    <string name="calendar_display">לוח שנה</string>
    <string name="cart_display">תצוגת הזמנות</string>
    <string name="need_to_connect">נתונים אלו יכולים לשנות רק משתמשים רשומים</string>
    <string name="connect_before_make_group">עליך ליצור חשבון לפני יצירת קבוצה.\n הינך מועבר/ת לעמוד ההתחברות.</string>
    <string name="can_create_group_message">עכשיו הזמן ליצור קבוצה.\nבהצלחה.</string>
    <string name="admin_hint">מנהל קבוצה</string>
    <string name="info_message">שים לב&#8230;</string>
    <string name="choose_admin_message">אליך לבחור מנהל קבוצה&#8230;</string>
    <string name="my_group">קבוצות שלי</string>
    <string name="set_group">קבוצה נוכחית</string>
    <string name="add_to_group">הוסף משתמשים לקבוצה</string>
    <string name="delete_group">מחק קבוצה</string>
    <string name="group_changed_message">הנתונים יוצגו לקבוצה: %1$s.</string>
    <string name="want_to_add_members">האם אתה רוצה להוסיף אנשים לקבוצת: %1$s</string>
    <string name="want_to_delete_group">האם אתה בטוח רוצה למחוק את קבוצת: %1$s</string>
    <string name="group_exists">הקבוצה: %1$s קיימת במעגר.\nהאם ברצונך לשחזר אותה?</string>
    <string name="loading_data">טוען נתונים...</string>
    <string name="could_not_create_group">קבוצה לא נוצרה\nאנה נסה שנית</string>
</resources>
