<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <include layout="@layout/toolbar"/>

        <TextView
            android:id="@+id/header_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="10dp"
            android:textColor="@color/red_2"
            android:textDirection="rtl"
            android:textSize="20pt"
            android:text="@string/account_header"/>

        <TextView
            android:id="@+id/signin_explanation_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:textDirection="rtl"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="10dp"
            android:text="@string/signin_explanation" />

        <TextView
            android:id="@+id/login_explanation_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:paddingStart="10dp"
            android:paddingTop="8dp"
            android:paddingEnd="10dp"
            android:paddingBottom="8dp"
            android:text="@string/login_explanation" />

        <AutoCompleteTextView
            android:id="@+id/name_edit"
            android:layout_width="284dp"
            android:layout_height="42dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:ems="10"
            android:hint="@string/name_hint"
            android:inputType="textPersonName"/>

        <AutoCompleteTextView
            android:id="@+id/email_edit"
            android:layout_width="286dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:ems="10"
            android:hint="@string/email_hint"
            android:inputType="textEmailAddress"
            android:textDirection="rtl"/>

        <AutoCompleteTextView
            android:id="@+id/group_name_edit"
            android:layout_width="286dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:ems="10"
            android:hint="@string/group_hint"
            android:inputType="textPersonName"
            android:textDirection="rtl"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:visibility="gone"
        android:background="@color/white"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:text="@string/loading_data"
            android:textSize="8pt"/>

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="100dp"
            android:layout_marginEnd="20dp"
            android:layout_height="100dp" />
    </LinearLayout>
</FrameLayout>
