<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <include layout="@layout/toolbar"/>

    <TextView
        android:id="@+id/header_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/settings"
        android:textSize="20pt"
        android:textAlignment="center"
        android:textColor="@color/red_2"/>

    <View
        android:id="@+id/divider1"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="30dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:background="?android:attr/listDivider" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Switch
            android:id="@+id/alerts_switch"
            android:layout_width="53dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:paddingEnd="10dp"
            android:paddingStart="10dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:textAlignment="textStart"
            android:textDirection="rtl"
            android:text="@string/alerts"
            android:textSize="8pt"
            android:layout_weight="7"/>
    </LinearLayout>

    <View
        android:id="@+id/divider2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:background="?android:attr/listDivider" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/cart_display_txt"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:paddingTop="3dp"
            android:paddingBottom="3dp"
            android:paddingEnd="10dp"
            android:paddingStart="10dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:textAlignment="textStart"
            android:textDirection="rtl"
            android:text="@string/cart_display"
            android:textSize="8pt"
            android:layout_weight="8"/>

        <RadioGroup
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:layout_height="30dp">

            <RadioButton
                android:id="@+id/calendar_radio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layoutDirection="rtl"
                android:text="@string/calendar_display" />

            <RadioButton
                android:id="@+id/list_radio"
                android:checked="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layoutDirection="rtl"
                android:text="@string/list_display" />
        </RadioGroup>
    </LinearLayout>

    <View
        android:id="@+id/divider3"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:background="?android:attr/listDivider" />

</LinearLayout>