<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/root_layout"
    android:layout_gravity="center_horizontal"
    android:gravity="center_horizontal">

    <include layout="@layout/toolbar"
        android:id="@+id/toolbar"/>

    <LinearLayout
        android:id="@+id/main_build_menu_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/toolbar"
        android:layout_centerInParent="true"
        android:orientation="vertical">

        <TextView
            android:id="@+id/header_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:layout_marginTop="15dp"
            android:text="@string/build_a_group"
            android:textAlignment="center"
            android:textSize="20pt" />

        <TextView
            android:id="@+id/email_explanation_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:paddingStart="15dp"
            android:paddingTop="5dp"
            android:paddingEnd="15dp"
            android:paddingBottom="5dp"
            android:text="@string/email_explanation"
            android:textAlignment="center"
            android:textSize="8pt" />

        <EditText
            android:id="@+id/group_name_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginBottom="5dp"
            android:layout_marginEnd="40dp"
            android:ems="10"
            android:hint="@string/group_hint"
            android:inputType="textEmailAddress" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="10dp"
            android:gravity="center">

            <Button
                android:id="@+id/send_btn"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="100dp"
                android:layout_height="35dp"
                android:layout_alignParentStart="true"
                android:layout_marginStart="20dp"
                android:padding="0dp"
                android:text="@string/send_dialog_btn" />

            <Button
                android:id="@+id/inc_btn"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_marginEnd="20dp"
                android:layout_toStartOf="@+id/dec_btn"
                android:background="@drawable/plus_red"
                android:gravity="bottom" />

            <Button
                android:id="@+id/dec_btn"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="20dp"
                android:background="@drawable/minus_red" />
        </RelativeLayout>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recycler_view"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp"
            app:layout_behavior="@string/appbar_scrolling_view_behavior" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:background="@color/white"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:text="@string/sending_mail"
            android:textSize="8pt"/>

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="100dp"
            android:layout_marginEnd="20dp"
            android:layout_height="100dp" />
    </LinearLayout>

</RelativeLayout>