<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_marginEnd="20dp"
    android:layout_marginStart="20dp"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/salads_layout"
        android:gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/salads_header_txt"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:layout_width="75dp"
            android:layout_height="30dp"
            android:layout_alignParentEnd="true"
            android:gravity="center_vertical|end"
            android:text="@string/salads"
            android:textAlignment="viewEnd"
            android:typeface="serif"
            android:textStyle="bold"
            android:textSize="8pt"
            android:textDirection="rtl" />

        <TextView
            android:id="@+id/salads_txt"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_toStartOf="@+id/salads_header_txt"
            android:gravity="center_vertical|end"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:paddingBottom="3dp"
            android:paddingTop="3dp"
            android:textSize="8pt"
            android:textAlignment="viewEnd"
            android:textDirection="rtl" />

    </RelativeLayout>

    <View
        android:id="@+id/divider_hor_1"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider" />

    <RelativeLayout
        android:id="@+id/main_dish_layout"
        android:gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/main_dish_header_txt"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:layout_width="75dp"
            android:layout_height="30dp"
            android:layout_alignParentEnd="true"
            android:gravity="center_vertical|end"
            android:text="@string/main_dish"
            android:textAlignment="viewEnd"
            android:typeface="serif"
            android:textStyle="bold"
            android:textSize="8pt"
            android:textDirection="rtl" />

        <TextView
            android:id="@+id/main_dish_txt"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_toStartOf="@+id/main_dish_header_txt"
            android:gravity="center_vertical|end"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:paddingBottom="3dp"
            android:paddingTop="3dp"
            android:textSize="8pt"
            android:textAlignment="viewEnd"
            android:textDirection="rtl" />
    </RelativeLayout>

    <View
        android:id="@+id/divider_hor_2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider" />

    <RelativeLayout
        android:id="@+id/side_layout"
        android:gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/side_header_txt"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:layout_width="75dp"
            android:layout_height="30dp"
            android:layout_alignParentEnd="true"
            android:gravity="center_vertical|end"
            android:text="@string/side_dish"
            android:textAlignment="viewEnd"
            android:typeface="serif"
            android:textStyle="bold"
            android:textSize="8pt"
            android:textDirection="rtl" />

        <TextView
            android:id="@+id/side_dish_txt"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_toStartOf="@+id/side_header_txt"
            android:gravity="center_vertical|end"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:paddingBottom="3dp"
            android:paddingTop="3dp"
            android:textAlignment="viewEnd"
            android:textSize="8pt"
            android:textDirection="rtl" />
    </RelativeLayout>
</LinearLayout>